--- a/src/Whole.css
+++ b/src/Whole.css
@@ -37,3 +37,88 @@ body {
   text-align: center;
   width: min(100px);
 }
+.shopGrid {
+  display: grid;
+  align-items: center;
+  text-align: center;
+  font-size: larger;
+  position: relative;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  width: fit-content;
+  display: grid;
+  gap: 1rem 1rem;
+  grid-template-columns: auto auto auto auto;
+}
+.makeawish {
+  position: relative;
+  font-size: 10px;
+  padding: 2px 5px;
+  border: 1px solid salmon;
+  background-color: aliceblue;
+  border-radius: 10px;
+  left: 70px;
+  bottom: 210px;
+}
+.imgshopcont {
+  width: 250px;
+  height: 200px;
+  border-radius: 10px;
+  margin: 15px;
+}
+.imgshopcont img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  overflow: hidden;
+  border-radius: 75px;
+}
+.flexcont {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: center;
+  font-size: larger;
+}
+.imgcont {
+  width: 300px;
+  height: 300px;
+  border-radius: 10px;
+  margin: 15px;
+}
+.flexcont img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  overflow: hidden;
+  border-radius: 75px;
+}
+.slidecont {
+  width: 1000px;
+  height: 750px;
+}
+.slidecont img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  overflow: hidden;
+  border-radius: 50px;
+}
+.flexcont a {
+  text-decoration: none;
+  font-weight: bold;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  color: inherit;
+  font-size: 1.05em;
+  margin: 1px 5px;
+  color: rgb(184, 79, 67);
+  width: min(100px);
+}
+.flexcont a:hover {
+  cursor: default;
+}
+.noshow {
+  display: none;
+}
