--- a/src/Whole.css
+++ b/src/Whole.css
@@ -1,6 +1,6 @@
 body {
   background-color: aliceblue;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-optical-sizing: auto;
   font-weight: 500;
   font-style: normal;
@@ -47,20 +47,47 @@ body {
   right: 0;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 100px;
   width: fit-content;
-  display: grid;
   gap: 1rem 1rem;
   grid-template-columns: auto auto auto auto;
 }
 .makeawish {
   position: relative;
   font-size: 10px;
+  width: 50px;
   padding: 2px 5px;
+  cursor: pointer;
+  color: rgb(184, 79, 67);
   border: 1px solid salmon;
   background-color: aliceblue;
   border-radius: 10px;
-  left: 70px;
-  bottom: 210px;
+  left: 165px;
+  bottom: 200px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+.makeawish input{
+  display: none;
+  cursor: inherit;
+  color: rgb(184, 79, 67);
+  margin: 0px;
+  font-size: 10px;
+  border: 0px;
+  padding: 0px;
+  background-color: aliceblue;
+}
+.makeawish button{
+  width: 50px;
+  cursor: inherit;
+  color: rgb(184, 79, 67);
+  margin: 1px;
+  font-size: 10px;
+  border: 0px;
+  padding: 0px;
+  background-color: aliceblue;
 }
 .imgshopcont {
   width: 250px;
@@ -121,4 +148,507 @@ body {
 }
 .noshow {
   display: none;
+}
+
+.slideshow {
+  position: relative;
+  top: 100px;
+  width: 100%;
+  max-width: 600px;
+  height: 400px;
+  border-radius: 25px;
+  border: 5px salmon solid;
+  overflow: hidden;
+  margin: auto;
+  -webkit-border-radius: 25px;
+  -moz-border-radius: 25px;
+  -ms-border-radius: 25px;
+  -o-border-radius: 25px;
+}
+
+.slide {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  filter: saturate(20%);
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+  -webkit-transition: opacity 0.5s ease-in-out;
+  -moz-transition: opacity 0.5s ease-in-out;
+  -ms-transition: opacity 0.5s ease-in-out;
+  -o-transition: opacity 0.5s ease-in-out;
+  -webkit-filter: saturate(50%);
+}
+
+.slide.active {
+  opacity: 1;
+}
+
+.slidetext {
+  position: absolute;
+  color: aliceblue;
+  text-decoration: none;
+  border: 2px aliceblue solid;
+  font-weight: 550;
+  background-color: salmon;
+  right: 75px;
+  bottom: 50px;
+  padding: 5px 15px;
+  border-radius: 10px;
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+  -webkit-transition: opacity 0.5s ease-in-out;
+  -moz-transition: opacity 0.5s ease-in-out;
+  -ms-transition: opacity 0.5s ease-in-out;
+  -o-transition: opacity 0.5s ease-in-out;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+
+.slidetext.active {
+  opacity: 1;
+}
+
+.controls {
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  transform: translateY(-50%);
+}
+
+.controls button {
+  background-color: rgba(255, 255, 255, 0);
+  border: none;
+  font-size: 2.5em;
+  color: rgb(184, 79, 67);
+  -webkit-text-stroke: 0.5px aliceblue;
+  padding: 10px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.controls button:hover {
+  -webkit-text-stroke: 1px aliceblue;
+}
+
+.loginsignup-cont{
+  margin: 5% 0%;
+  width: 35%;
+  position: absolute;
+  border: 5px solid salmon;
+  border-radius: 25%;
+  background-color: rgba(255, 255, 255, 0.75);
+  padding: 5% 5% 10%;
+  left: 50%;
+  right: 50%;
+  transform: translate(-50%);
+  -webkit-transform: translate(-50%);
+  -moz-transform: translate(-50%);
+  -ms-transform: translate(-50%);
+  -o-transform: translate(-50%);
+  -webkit-border-radius: 25%;
+  -moz-border-radius: 25%;
+  -ms-border-radius: 25%;
+  -o-border-radius: 25%;
+}
+.endform{
+  display: flex;
+  justify-content: space-between;
+}
+.loginsignup-cont form{
+  display: grid;
+  gap: 1rem 1rem;
+  grid-template-columns: auto;
+  margin-left: auto;
+  margin-right: auto;
+  width: fit-content;
+  align-items: center;
+  text-align: center;
+}
+.logsign{
+  text-decoration: none;
+  padding: 10px;
+  margin: 10px 0px;
+  background-color: aliceblue;
+  border: 2px solid salmon;
+  color: rgb(184, 79, 67);
+  font-size: 1em;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+.formpart{
+  text-decoration: none;
+  padding: 10px;
+  margin: 10px 0px;
+  background-color: aliceblue;
+  border: 2px solid salmon;
+  color: rgb(184, 79, 67);
+  font-size: 1em;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+.formpart button{
+  text-decoration: none;
+  background-color: white;
+  border: 2px solid salmon;
+  color: rgb(184, 79, 67);
+  cursor: pointer;
+  padding: 0.25em 1em;
+  font-size: 0.75em;
+  font-weight: 600;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+.formpart input{
+  text-decoration: none;
+  margin: 0px 10px;
+  background-color: white;
+  border: 2px solid salmon;
+  color: rgb(184, 79, 67);
+  font-size: 0.75em;
+  padding: 0.25em 0.5em;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+.signlogheader{
+  color: rgb(184, 79, 67);  
+}
+.profilecont{
+  margin: 5% 0%;
+  width: 55%;
+  position: absolute;
+  display: grid;
+  gap: 30px 30px;
+  grid-template-columns: auto;
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: center;
+  border: 5px solid salmon;
+  border-radius: 25%;
+  background-color: rgba(255, 255, 255, 0.75);
+  padding: 5%;
+  left: 50%;
+  right: 50%;
+  transform: translate(-50%);
+  -webkit-transform: translate(-50%);
+  -moz-transform: translate(-50%);
+  -ms-transform: translate(-50%);
+  -o-transform: translate(-50%);
+  -webkit-border-radius: 25%;
+  -moz-border-radius: 25%;
+  -ms-border-radius: 25%;
+  -o-border-radius: 25%;  
+}
+.profilecont form{
+  display: flex;
+  gap: 1rem 1rem;
+  width: 650px;
+  justify-content: space-between;
+  text-align: center;
+}
+.profilecont .oldpassword{
+  margin-top: 2.5em;
+  display: flex;
+  justify-content:  space-around;
+}
+.InvalidPassword{
+  color: crimson;
+  text-align: center;
+  font-weight: 525;
+  font-size: x-large;
+}
+.logout{
+  cursor: pointer;
+  text-decoration: none;
+  padding: 10px;
+  margin: 10px 0px;
+  background-color: crimson;
+  border: 5px solid rgb(255, 255, 255);
+  color: aliceblue;
+  font-size: 1em;
+  border-radius: 15px;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  -ms-border-radius: 15px;
+  -o-border-radius: 15px;
+}
+.title{
+  color: rgb(184, 79, 67);
+  text-align: center;
+}
+.EmptyWishlist{
+  color: rgb(184, 79, 67);
+  text-align: center;
+  font-weight: 525;
+  font-size: x-large;
+}
+.wishlistcont{
+  margin: 5% 0%;
+  width: 60%;
+  position: absolute;
+  display: grid;
+  gap: 30px 30px;
+  grid-template-columns: auto;
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: center;
+  border: 5px solid salmon;
+  border-radius: 15%;
+  background-color: rgba(255, 255, 255, 0.75);
+  padding: 5%;
+  left: 50%;
+  right: 50%;
+  transform: translate(-50%);
+  -webkit-transform: translate(-50%);
+  -moz-transform: translate(-50%);
+  -ms-transform: translate(-50%);
+  -o-transform: translate(-50%);
+  -webkit-border-radius: 15%;
+  -moz-border-radius: 15%;
+  -ms-border-radius: 15%;
+  -o-border-radius: 15%;
+}
+.makeabuy {
+  color: rgb(184, 79, 67);
+  border: 1px solid salmon;
+  background-color: aliceblue;
+  cursor: pointer;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+}
+.makeabuy input{
+  display: none;
+  cursor: inherit;
+  color: rgb(184, 79, 67);
+  margin: 0px;
+  font-size: 10px;
+  border: 0px;
+  padding: 0px;
+  background-color: aliceblue;
+}
+.makeabuy button{
+  width: fit-content;
+  height: fit-content;
+  cursor: inherit;
+  font-size: 1em;
+  color: rgb(184, 79, 67);
+  border: 0px;
+  padding: 0px;
+  background-color: aliceblue;
+}
+.inverse{ 
+  color: aliceblue;
+  border-color: white;
+  background-color: salmon;
+}
+.inverse input{
+  color: aliceblue;
+  background-color: salmon;
+}
+.inverse button{
+  color: aliceblue;
+  background-color: salmon;
+}
+.wishlistitemCont{
+  display: flex;
+  font-size: larger;
+  position: relative;
+  left: 0;
+  right: 0;
+  justify-content: space-between;
+  margin: 10px;
+  width: 850px;
+}
+.wishlistitemCont img {
+  width: 300px;
+  height: auto;
+  border: 2px salmon solid;
+  object-fit: cover;
+  overflow: hidden;
+  border-radius: 75px;
+}
+.wishlisttextCont {
+  width: 300px;
+  height: max-content;
+  border-radius: 10px;
+  margin: 15px 0px;
+  display: grid;
+  gap: 30px 30px;
+  grid-template-columns: auto;
+  justify-content: center;
+  text-align: center;
+}
+.wishlisttextCont .text{
+  color: rgb(184, 79, 67);
+  font-size: larger;
+  position: relative;
+  left: 50%;
+  right: 50%;
+  transform: translateX(-50%);
+  font-weight: 650;
+}
+.wishlisttextCont button{
+  width: fit-content;
+  height: fit-content;
+  font-size: 1em;
+  position: relative;
+  left: 50%;
+  right: 50%;
+  transform: translateX(-50%);
+  color: rgb(255, 255, 255);
+  border: 0px;
+  padding: 20px;
+  border-radius: 20px;
+  background-color: crimson;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+}
+.buyersUnderOverlay{
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+.buyersOverlay{
+  width: 80%;
+  height: 50%;
+  position: absolute;
+  border: 5px solid salmon;
+  border-radius: 10%;
+  background-color: rgba(255, 255, 255, 1);
+  padding: 5%;
+  left: 50%;
+  right: 50%;
+  transform: translate(-50%);
+  -webkit-transform: translate(-50%);
+  -moz-transform: translate(-50%);
+  -ms-transform: translate(-50%);
+  -o-transform: translate(-50%);
+  -webkit-border-radius: 10%;
+  -moz-border-radius: 10%;
+  -ms-border-radius: 10%;
+  -o-border-radius: 10%;
+}
+.buyersOverlay .underlay{
+  display: flex;
+  justify-content: space-around;
+}
+.buyersOverlay img {
+  width: 500px;
+  height: auto;
+  border: 2px salmon solid;
+  object-fit: cover;
+  overflow: hidden;
+  border-radius: 75px;
+}
+.buyertextCont {
+  width: 300px;
+  height: max-content;
+  border-radius: 10px;
+  margin: 50px 0px;
+  display: grid;
+  gap: 30px 30px;
+  grid-template-columns: auto;
+  justify-content: center;
+  text-align: center;
+}
+.buyertextCont .text{
+  color: rgb(184, 79, 67);
+  font-size: x-large;
+  position: relative;
+  left: 50%;
+  right: 50%;
+  transform: translateX(-50%);
+  font-weight: 650;
+}
+.buyertextCont button{
+  width: fit-content;
+  height: fit-content;
+  font-size: 1em;
+  position: relative;
+  left: 50%;
+  right: 50%;
+  transform: translateX(-50%);
+  color: rgb(255, 255, 255);
+  border: 0px;
+  padding: 20px;
+  border-radius: 20px;
+  background-color: crimson;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+}
+.buyertextCont .other{
+  width: 100px;
+  width: fit-content;
+  height: fit-content;
+  font-size: 1em;
+  position: relative;
+  left: 25%;
+  right: 50%;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+}
+.buyertextCont .other button{
+  position: relative;
+  left: none;
+  right: none;
+  transform: none;
+  -webkit-transform: none;
+  -moz-transform: none;
+  -ms-transform: none;
+  -o-transform: none;
+}
+.buyertextCont .other .text{
+  color: rgb(184, 79, 67);
+  margin: 10px 20px;
+  font-size: x-large;
+  font-weight: 650;
+}
+hr{
+  width: 100%;
+  color: black;
+  background-color: black;
+  height: 1px;
 }
